# hunter-cmake-template

./: CMakeLists.txt  foo.cpp
